# manning--build-an-extensible-cli-with-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-actions-ci.yaml
klickbrick/: __init__.py
klickbrix/: __main__.py  cli.py
tests/: test_klickbrick.py  test_klickbrix.py
