[tool.poetry]
name = "klickbrick"
version = "0.1.0"
description = ""
authors = ["Pavel Filatov <filatov.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
black = "^22.6.0"

[tool.poetry.scripts]
klickbrick = "klickbrick.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
