[tool.poetry]
name = "klickbrix"
version = "0.2.0"
description = ""
authors = ["Pavel Filatov <filatov.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
klickbrick = "klickbrix.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
